Adding reading fields from pandas dataframes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "astropy>=7.1.0",
+    "pandas>=2.3.2",
     "pyaml>=25.7.0",
     "rich>=14.1.0",
     "twine>=6.1.0",
