--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "rich>=14.1.0",
     "twine>=6.1.0",
     "polars>=1.35.1",
+    "yaml-to-markdown>=0.1.1744598339",
 ]
 license = "MIT"
 
