--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "twine>=6.1.0",
     "polars>=1.35.1",
     "yaml-to-markdown>=0.1.1744598339",
+    "pydantic>=2.12.5",
 ]
 license = "MIT"
 
